test/libsolidity/syntaxTests/storageLayoutSpecifier/bytes_length_member.sol
contract C layout at bytes("ABCD").length {}
// ----
// TypeError 1139: (21-41): The base slot of the storage layout must be a compile-time constant expression.
